# templater

./: .gitignore  premake5.lua
src/: main.c
src/project/: project.c  project.h
templates/c/: xmake.lua
templates/c/src/: main.c
templates/c/tools/premake/: premake5.lua
templates/cpp/: generate-solution-files.bat  xmake.lua
templates/cpp/src/: main.cpp
templates/gfram/src/: main.cpp
templates/gfram/src/App/: cSceneGame.cpp  cSceneGame.h
templates/gfram/src/Core/: cApplication.cpp  cApplication.h
templates/gfram/src/Core/Misc/: cPointCloud.cpp  cPointCloud.h  iSingleton.h
templates/gfram/src/Core/Renderer/: cRenderer.cpp  cRenderer.h
templates/gfram/src/Core/Scene/: iScene.h
templates/gfram/tools/premake/: premake5.lua
templates/love/: conf.lua  main.lua
templates/opengl/src/: main.cpp
templates/opengl/tools/premake/: premake5.lua
templates/psx/: CMakeLists.txt  CMakePresets.json  _build.bat  _compile.bat  _compile_start.bat  _rebuild_and_compile.bat  _run.bat  texture_list.txt
templates/psx/res/: nicklas.tim
templates/psx/src/: main.c
templates/psx/tools/obj2inline/src/: main.cpp
templates/wr/res/: basic.frag  basic.vert  billboard.geom  debug_lines.frag  debug_lines.vert  star.frag  star.vert
templates/wr/src/App/: SpaceMath.h  cNode.cpp  cNode.h  cOctree.cpp  cOctree.h  cSceneGame.cpp  cSceneGame.h  sPoint.h
templates/wr/src/Core/: cApplication.cpp  cApplication.h  cWindow.cpp  cWindow.h
templates/wr/src/Core/Math/: Vector3.h
templates/wr/src/Core/Renderer/: cRenderer.cpp  (+1 more)
templates/wr/tools/premake/: premake5.lua
(+18 files in other folders)
